Fixed small glitch where overflow: hidden would clip the child elements and the background would show through.

--- a/client/css/layout.css
+++ b/client/css/layout.css
@@ -1366,7 +1366,7 @@ input:invalid+span:after {
 .inputpalette > div{
   display: flex;
   flex-wrap: wrap;
-  padding: 0 5px;
+  padding: 0 2px;
 }
 .inputpalette > div input{
   display: none;
@@ -1377,10 +1377,8 @@ input:invalid+span:after {
   display: inline-block;
   border-radius: 8px;
   position: relative;
-  border: 3px solid var(--roomColor);
-  padding: 0px;
-  overflow: hidden;
-  
+  border: 3px solid transparent;
+  padding: 0;
 }
 .inputpalette > div input[type="radio"]:checked+label{
   border: 3px solid var(--VTTblue);
@@ -1393,13 +1391,16 @@ input:invalid+span:after {
   width: 1.25em;
   background: var(--VTTblue);
   color: white;
-  border-radius: 100%;
-  border-top-right-radius: 0;
+  border-top-right-radius: 40%;
+  border-top-left-radius: 50%;
+  border-bottom-right-radius: 50%;
+  border-bottom-left-radius: 50%;
   content: 'check';
   position: absolute;
   top: -3px;
   right: -3px;
   border: 2px solid white;
+  z-index: -1;
 }
 .inputpalette > div label > div{
   display: block;
@@ -1414,4 +1415,5 @@ input:invalid+span:after {
   overflow: hidden;
   background-color: inherit;
   border-radius: 5px;
+  z-index: -2;
 }
